--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,77 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@import url("https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amatic+SC&display=swap");
+
+* {
+  cursor: none;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: white;
+}
+
+@layer utilities {
+  @variants responsive {
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    .no-scrollbar::-webkit-scrollbar {
+      display: none;
+    }
+
+    /* Hide scrollbar for IE, Edge and Firefox */
+    .no-scrollbar {
+      -ms-overflow-style: none; /* IE and Edge */
+      scrollbar-width: none; /* Firefox */
+    }
+  }
+}
+
+.cursor {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 32px;
+  height: 32px;
+  border-radius: 16px;
+  mix-blend-mode: difference !important;
+  background-color: white !important;
+}
+
+.title_one {
+  font-family: "Abril Fatface", cursive;
+  /* font-family: "Amatic SC", cursive; */
+}
+
+.linkOne:hover {
+  text-shadow: 5px 5px rgba(4, 140, 231, 0.4), 10px 10px rgba(4, 140, 231, 0.3),
+    15px 15px rgba(4, 140, 231, 0.2), 20px 20px rgba(4, 140, 231, 0.1),
+    25px 25px rgba(4, 140, 231, 0.05);
+}
+
+.linkTwo:hover {
+  text-shadow: 5px 5px rgba(188, 97, 129, 0.4),
+    10px 10px rgba(188, 97, 129, 0.3), 15px 15px rgba(188, 97, 129, 0.2),
+    20px 20px rgba(188, 97, 129, 0.1), 25px 25px rgba(188, 97, 129, 0.05);
+}
+
+.linkThree:hover {
+  text-shadow: 5px 5px rgba(145, 156, 196, 0.4),
+    10px 10px rgba(145, 156, 196, 0.3), 15px 15px rgba(145, 156, 196, 0.2),
+    20px 20px rgba(145, 156, 196, 0.1), 25px 25px rgba(145, 156, 196, 0.05);
+}
+
+.linkFour:hover {
+  text-shadow: 5px 5px rgba(82, 119, 192, 0.4),
+    10px 10px rgba(82, 119, 192, 0.3), 15px 15px rgba(82, 119, 192, 0.2),
+    20px 20px rgba(82, 119, 192, 0.1), 25px 25px rgba(82, 119, 192, 0.05);
+}
+
+.linkOne,
+.linkTwo,
+.linkThree,
+.linkFour {
+  font-family: "Abril Fatface", cursive;
+  transition: text-shadow 0.3s ease-in-out;
 }
